--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-redux": "^9.2.0"
