--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -20,14 +21,18 @@
     "expo": "~52.0.20",
     "expo-image-picker": "^16.0.3",
     "expo-router": "^4.0.14",
+    "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
