--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "my-new-app",
+    "name": "Hayat",
     "slug": "hayat-demo",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -23,16 +23,7 @@
       },
       "package": "com.hayat.dev"
     },
-    "web": {
-      "build": {
-        "env": {
-          "GOOGLE_CLIENT_ID": "YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
-        }
-      },
-      "favicon": "./assets/favicon.png"
-    },
     "extra": {
-      "googleClientId": "YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com",
       "eas": {
         "projectId": "67a0e5a4-022c-4e87-b694-c3ad191fa0e6"
       }
