--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.20",
+    "expo": "^52.0.23",
     "expo-auth-session": "^6.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-router": "^4.0.14",
@@ -31,16 +31,22 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-fast-image": "^8.6.3",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.6",
     "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
