--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -12,10 +12,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
+  - name: Set up JDK 11
+    uses: actions/setup-java@v3
+    with:
+      java-version: 11
+      distribution: 'temurin' 
 
     - name: Install Node.js and npm
       uses: actions/setup-node@v3
