--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "axios": "^1.7.9",
     "expo": "^52.0.23",
     "expo-auth-session": "^6.0.1",
+    "expo-device": "^7.0.1",
+    "expo-firebase-core": "^6.0.0",
     "expo-image-picker": "^16.0.3",
+    "expo-notifications": "^0.29.11",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.14",
     "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
     "expo-web-browser": "^14.0.1",
+    "firebase": "^11.1.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
