--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Hayat",
-    "slug": "hayat-demo",
+    "name": "Musfi Collections",
+    "slug": "musfi-demo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -14,15 +14,16 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.hayat.dev"
+      "bundleIdentifier": "com.musfi.dev"
     },
     "android": {
-      "googleServicesFile": "./assets/google-services.json" ,
+      "googleServicesFile": "./assets/google-services.json",
+      "usesCleartextTraffic": true,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/logo-no-background.png",
+        "backgroundColor": "#070738"
       },
-      "package": "com.hayat.dev"
+      "package": "com.musfi.dev"
     },
     "extra": {
       "eas": {
