--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -38,7 +38,8 @@ jobs:
         ./gradlew assembleRelease 
 
     - name: Upload APK artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: android-release-apk
         path: android/app/build/outputs/apk/release/app-release.apk
+        overwrite: true
