--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
-    "expo": "^52.0.23",
+    "expo": "52.0.19",
     "expo-auth-session": "^6.0.1",
     "expo-device": "^7.0.1",
     "expo-image-picker": "^16.0.3",
