--- a/package.json
+++ b/package.json
@@ -13,27 +13,23 @@
     "@expo/vector-icons": "^14.0.4",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@lottiefiles/dotlottie-react": "^0.6.5",
-    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "@reduxjs/toolkit": "^2.5.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "expo": "52.0.20",
+    "expo": "^52.0.23",
     "expo-auth-session": "^6.0.1",
-    "expo-device": "^7.0.1",
     "expo-image-picker": "^16.0.3",
-    "expo-notifications": "^0.29.11",
     "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.14",
     "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.6",
     "expo-web-browser": "^14.0.1",
-    "firebase": "^11.1.0",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
