Final stable changes

--- a/app.json
+++ b/app.json
@@ -1,17 +1,12 @@
 {
   "expo": {
-    "name": "Musfi Collections",
+    "name": "Musfi Shop",
     "slug": "musfi-demo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": false,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.musfi.dev"
