--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "axios": "^1.7.9",
     "expo": "^52.0.23",
     "expo-auth-session": "^6.0.1",
+    "expo-build-properties": "~0.13.2",
     "expo-image-picker": "^16.0.3",
+    "expo-linear-gradient": "~14.0.2",
     "expo-router": "^4.0.14",
     "expo-secure-store": "~14.0.0",
     "expo-status-bar": "~2.0.0",
@@ -36,7 +38,8 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
-    "react-native-paper": "^5.12.5",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^5.0.0",
@@ -46,13 +49,13 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-web-lottie": "^1.4.4",
-    "react-redux": "^9.2.0",
-    "expo-build-properties": "~0.13.2"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-linear-gradient": "^2.3.1",
     "typescript": "^5.3.3"
   },
   "private": true
