--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "@reduxjs/toolkit": "^2.5.0",
-    "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.7.9",
     "expo": "^52.0.38",
+    "expo-auth-session": "^6.0.1",
     "expo-build-properties": "~0.13.2",
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.2",
@@ -35,7 +35,6 @@
     "formik": "^2.4.6",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
@@ -44,21 +43,23 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "^3.16.6",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.13",
     "react-native-web-lottie": "^1.4.4",
     "react-redux": "^9.2.0",
-    "yarn": "^1.22.22",
     "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "@types/react-native-linear-gradient": "^2.3.1",
     "typescript": "^5.3.3"
   },
   "private": true
