--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-image-base64": "^0.1.4",
     "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.16.6",
     "react-native-reanimated-carousel": "^3.5.1",
