--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
         "expo-build-properties",
         {
           "android": {
-            "kotlinVersion": "1.9.25"
+            "kotlinVersion": "1.9.25",
+            "composeCompilerVersion": "1.5.15"
           }
         }
       ]
