--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        npm install
+        npm install --legacy-peer-deps
 
     - name: Expo Prebuild
       run: |
